@@ -2293,7 +2293,7 @@
                      (propagate-to-refs var type)
                      (unless (preserve-single-use-debug-var-p call var)
                        (update-lvar-dependencies leaf arg)
-                       (propagate-ref-dx use arg)
+                       (propagate-ref-dx use arg var)
                        (let ((use-component (node-component use)))
                          (substitute-leaf-if
                           (lambda (ref)
