@@ -1780,3 +1780,34 @@
        (assert (sb-ext:stack-allocated-p x))
        (funcall x)))
    ((3) 3)))
+
+(with-test (:name :dx-anonymous-closure-otherwise-inaccessible)
+  (checked-compile-and-assert
+   ()
+   '(lambda (x)
+     (let ((y (cons (lambda () (print x))
+                    (lambda () (print x)))))
+       (declare (dynamic-extent y))
+       (print y)
+       (assert (sb-ext:stack-allocated-p y))
+       (assert (sb-ext:stack-allocated-p (car y)))
+       (assert (sb-ext:stack-allocated-p (cdr y)))
+       (print y)
+       (funcall (car y))))
+   ((3) 3)))
+
+(with-test (:name :dx-anonymous-closure-otherwise-inaccessible.flet)
+  (checked-compile-and-assert
+   ()
+   '(lambda (x)
+     (let ((y (cons (flet ((g () (print x)))
+                      #'g)
+                    (lambda () (print x)))))
+       (declare (dynamic-extent y))
+       (print y)
+       (assert (sb-ext:stack-allocated-p y))
+       (assert (sb-ext:stack-allocated-p (car y)))
+       (assert (sb-ext:stack-allocated-p (cdr y)))
+       (print y)
+       (funcall (car y))))
+   ((3) 3)))
