@@ -1,8 +1,10 @@
 ;;;; -*- coding: utf-8; fill-column: 78 -*-
 
 changes relative to sbcl-2.3.2:
-  * enhancement: LET-bound anonymous closures declared dynamic extent can be
-    stack allocated, just like closures bound with FLET or LABELS.
+  * enhancement: LET-bound anonymous closures declared dynamic extent can now
+    be stack allocated, just like closures bound with FLET or
+    LABELS. Otherwise-inaccessible closure subparts of objects declared
+    dynamic extent can now also be stack allocated.
 
 changes in sbcl-2.3.2 relative to sbcl-2.3.1:
   * incompatible change: the :ORDER long-form-option in
